--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.27.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.16.0",
     "motion": "^11.16.0",
